--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,28 @@ updates:
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "16:00"
     groups:
-      python-packages:
+      common:
         patterns:
-          - "*"
+          - hashin
+          - cython
+          - flake8
+      # Keep the package managers themselves separate because they are higher risk
+      # and also higher visibility--ie, users generally want latest, so we don't
+      # want breakage in the `common` group to prevent updating package manager versions
+      pip:
+        patterns:
+          - pip
+      pip-tools:
+        patterns:
+          - pip-tools
+      pipenv:
+        patterns:
+          - pipfile
+          - pipenv
+      poetry:
+        patterns:
+          - poetry
